tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all module, type, fn and constant defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.const_decl)),

        // then the expressions to evaluate, in order
        repeat($.expression),
      ),

    match_pattern: $ =>
      choice(
        $.unit,
        alias($.bool_literal, $.bool),
        alias($.int8_literal, $.int8),
        alias($.uint8_literal, $.uint8),
        alias($.int16_literal, $.int16),
        alias($.uint16_literal, $.uint16),
        alias($.int32_literal, $.int32),
        alias($.uint32_literal, $.uint32),
        alias($.int64_literal, $.int64),
        alias($.uint64_literal, $.uint64),
        alias($.int128_literal, $.int128),
        alias($.uint128_literal, $.uint128),
        alias($.float_literal, $.float),
        alias($.char_literal, $.char),
        alias($.string_literal, $.string),
        alias($.mp_list, $.list),
        alias($.mp_list_cons, $.list_cons),
        alias($.mp_tuple, $.tuple),
        alias($.mp_enum, $.enum),
        alias($.variable_identifier, $.variable),
      ),

    // match pattern - list
    mp_list_content: $ => list_content_base($, $.match_pattern),

    //
    // match pattern - list cons
    mp_tuple_the_rest: $ => tuple_literal_the_rest_base($, $.match_pattern),

    //
    // match pattern - enum
    mp_enum_fields: $ => enum_fields_base($, $.match_pattern),

    // ---------------------
    // Expressions
    // ---------------------

    /**
     * `simple_expression` vs. `expression`:
     *
     * `simple_expression`:
     * includes simple elements that have distinct starting and ending points, typically not requiring parentheses for clarity.
     * e.g. literals, variables, etc.
     *
     * `expression`:
     * Enompasses both simple expressions and more complex expressions (e.g. infix operations, function calls, etc.).
     * These are elements that may require parentheses to disambiguate the order and grouping of elements.
     *
     * e.g.
     * `myFunction myFunction2 arg arg2`
     *
     * without parentheses, It's unclear whether `arg2` is supposed to be a second argument to `myFunction2`:
     * myFunction (myFunction2 arg arg2)
     *
     * or a second argument to `myFunction`:
     * myFunction (myFunction2 arg) (arg2)
     *
     */

    // TODO: reconsider having enum_literal as a simple_expression
    simple_expression: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.qualified_const_name,
        // $.qualified_fn_name,
        $.record_update,
      ),

    expression: $ =>
      choice(
        $.paren_expression,
        $.simple_expression,
        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.infix_operation,
        $.apply,

        $.lambda_expression,
        $.pipe_expression,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Strings
    // TODO: maybe add support for multiline strings (""")
    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    multiline_string_content: $ =>
      repeat1(
        choice(
          token.immediate(prec(1, /[^\\"]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    // $"hello {name}
    string_interpolation: $ =>
      choice(
        seq(
          field("symbol_dollar_sign", alias("$", $.symbol)),
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(
            field(
              "string_interpolation_content",
              $.string_interpolation_content,
            ),
          ),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_dollar_sign", alias("$", $.symbol)),
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(
            field(
              "string_interpolation_content",
              $.string_interpolation_content,
            ),
          ),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_interpolation_content: $ =>
      repeat1(choice($.string_to_eval, $.string_text)),

    string_text: $ => token.immediate(prec.left(/[^{}\\"]+/)),

    string_to_eval: $ =>
      seq(
        field("symbol_open_brace", alias("{", $.symbol)),
        field("expr", $.expression),
        field("symbol_close_brace", alias("}", $.symbol)),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // Characters
    char_or_string_escape_sequence: _ =>
      token.immediate(seq("\\", /(\"|\\|\/|b|f|n|r|t|u)/)),

    //
    // Infix operations
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.expression),
          ),
        ),
      ),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.
    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    //
    // Floats
    list_literal: $ => list_literal_base($, $.list_content),
    list_content: $ => list_content_base($, $.expression),

    //
    // Dict
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    tuple_literal_the_rest: $ => tuple_literal_the_rest_base($, $.expression),

    //
    // Record
    enum_literal: $ => enum_literal_base($, $.enum_fields),
    enum_fields: $ => enum_fields_base($, $.expression),

    //
    // If expressions
    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Match expression
    // TODO : allow one-line match expressions (i.e. match x with | 1 -> ...)
    match_expression: $ =>
      seq(
        field("keyword_match", alias("match", $.keyword)),
        field("arg", $.expression),
        field("keyword_with", alias("with", $.keyword)),
        field("cases", prec.left(repeat1($.match_case))),
      ),
    match_case: $ =>
      seq(
        field("symbol_pipe", alias("|", $.symbol)),
        field("pattern", $.match_pattern),
        optional(
          seq(
            field("when_keyword", alias("when", $.keyword)),
            field("guard_expr", $.expression),
          ),
        ),
        field("symbol_arrow", alias("->", $.symbol)),
        choice(
          seq($.indent, field("rhs", $.expression), $.dedent),
          field("rhs", $.expression),
        ),
      ),

    //
    // Function call
    // e.g. `Int64.add 1 2
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            field(
              "args",
              repeat1(choice($.paren_expression, $.simple_expression)),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
          // the new line is used as a delimiter
          optional($.newline),
        ),
      ),

    //
    // Let expression
    let_expression: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        field("pattern", $.let_pattern),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq(field("expr", $.expression), "\n"),
          seq($.indent, field("expr", $.expression), $.dedent, optional("\n")),
        ),
        field("body", $.expression),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    pipe_fn_call: $ =>
      prec.right(
        seq(
          field("fn", $.qualified_fn_name),
          field(
            "args",
            repeat(choice($.paren_expression, $.simple_expression)),
          ),
        ),
      ),

    //
    // Pipe enum
    pipe_expr: $ =>
      choice($.pipe_lambda, $.pipe_infix, $.pipe_fn_call, $.pipe_enum),

    pipe_exprs: $ =>
      prec.left(
        seq(
          field("symbol_pipe", alias("|>", $.symbol)),
          field("pipe_expr", $.pipe_expr),
        ),
      ),

    pipe_expression: $ =>
      prec.left(
        PREC.PIPE_EXPR,
        seq(
          field("expr", $.expression),
          repeat1(field("pipe_exprs", $.pipe_exprs)),
        ),
      ),

    // ---------------------
    // Common
    // ---------------------
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          field("type_identifier", $.type_identifier),
        ),
        optional(field("type_args", $.type_args)),
      ),

    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `double` in `let double (x: Int) = x + x`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `LanguageTools in `PACKAGE.Darklang.LanguageTools.SomeType`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    //
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    newline: $ => /\n/,
