tree-sitter-darklang/test/corpus/exhaustive/exprs/strings.txt
==================
empty string
==================

""

---

(source_file
  (expression (simple_expression (string_segment (string_literal (symbol) (symbol)))))
)


==================
basic string
==================

"hello, world"

---

(source_file
  (expression
    (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))
  )
)



==================
string with escape
==================

"hello\tworld"

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_literal
          (symbol)
          (string_content (char_or_string_escape_sequence))
          (symbol)
        )
      )
    )
  )
)


==================
EGC
==================

"👩‍👩‍👧‍👦"

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_literal
          symbol_open_quote: (symbol)
          content: (string_content)
          symbol_close_quote: (symbol)
        )
      )
    )
  )
)


==================
unicode
==================

"żółw"

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_literal
          symbol_open_quote: (symbol)
          content: (string_content)
          symbol_close_quote: (symbol)
        )
      )
    )
  )
)

==================
string interpolation
==================

$"hello {name}"

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_interpolation
          (symbol)
          (symbol)
          (string_interpolation_content
            (string_text)
            (string_to_eval
              (symbol)
              (expression (simple_expression (variable_identifier)))
              (symbol)
            )
          )
          (symbol)
        )
      )
    )
  )
)


==================
string interpolation 2
==================

$"Name: {name}, Age: {age}"

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_interpolation
          (symbol)
          (symbol)
          (string_interpolation_content
            (string_text)
            (string_to_eval
              (symbol)
              (expression (simple_expression (variable_identifier)))
              (symbol)
            )
            (string_text)
            (string_to_eval
              (symbol)
              (expression (simple_expression (variable_identifier)))
              (symbol)
            )
          )
          (symbol)
        )
      )
    )
  )
)


==================
multiline string
==================

"""int64Multiply's 2nd argument (`b`) should be an Int64. However, a Float (1.0) was passed instead.



		Expected: (b: Int64)

		Actual: a Float: 1.0"""

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_literal (symbol) (multiline_string_content) (symbol))
      )
    )
  )
)


==================
multiline string interpolation
==================

$"""test {"1"}"""

---

(source_file
  (expression
    (simple_expression
      (string_segment
        (string_interpolation
          (symbol)
          (symbol)
          (string_interpolation_content
            (string_text)
            (string_to_eval
              (symbol)
              (expression
                (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))
              )
              (symbol)
            )
          )
          (symbol)
        )
      )
    )
  )
)


==================
test
==================

Stdlib.String.trim " \xe2\x80\x83foo\xe2\x80\x83bar\xe2\x80\x83 "
== "\xe2\x80\x83foo\xe2\x80\x83bar\xe2\x80\x83"

